# recipehubAPI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/api/: app.py
src/api/database/: db.py
src/api/models/: recipe.py
